--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules
 # builds
 build
 dist
+docs/build
 .rpt2_cache
 
 # misc
@@ -16,6 +17,7 @@ dist
 .env.development.local
 .env.test.local
 .env.production.local
+.idea
 
 npm-debug.log*
 yarn-debug.log*
